--- a/advanced_search.html
+++ b/advanced_search.html
@@ -11,7 +11,7 @@
 				<img src="img/google_logo.png" alt="Google" width="74">
 			</ul>	
 			<ul>
-				<a href="google.html">Google Search </a>
+				<a href="index.html">Google Search </a>
 				<a href="image_search.html">Images </a>
 				<a href="#"><button id="sign_in">Sign In</button></a>
 			</ul>
