--- a/image_search.html
+++ b/image_search.html
@@ -8,7 +8,7 @@
 	<body>
 		<nav id="links">	
 			<ul>
-				<a href="google.html">Google Search</a>
+				<a href="index.html">Google Search</a>
 				<a href="advanced_search.html">Advanced Search </a>
 				<a href="#"><button id="sign_in">Sign In</button></a>
 			</ul>
